Fixed - Specialized Refining no longer ignores all external supply/demand bonus
Fixed - Mantle Bore now working with Specialized Mining
Fixed - Catalytic Core now correctly working with Specialized Refining
Fixed - Centralization Bureau now properly applies output bonus when present
Fixed - Specialized industries no longer bug out when present on the same planet

Governments
Fixed - Tooltip no longer displays "click to change" when it can't actually change
Fixed - Monastic Order now properly increases marine XP
Fixed - Arcology now properly suppresses the heat conditions added by an orbital lämp
Fixed - Arcology now buildable where it should be (everywhere except lava & gas giants)
Fixed - Another Arcoship crash (Underworld Gov.)

Derelict Industries
Fixed - No longer (almost) exclusively spawn on abyss planets
Fixed - No longer spawn in hidden systems

World Wonders
Added - Setting for Cloud Painter to remove the planetary shield texture
Added - Setting for Cloud Painter to replace the planetary shield texture with a barely visible alternative
Adjusted - Added US_continent for valid World Tree planet types
Adjusted - Removed US_magnetic planets from valid World Tree planet types
Fixed - Another Arcoship crash

3.3.e
General
Adjusted - Updated to 0.97a

Pets
Added - Terraforming Drone
Added - Domain-Era Roomba
Fixed - Pet unassignable Bug

Supercomputer
Fixed - Cross-Mod Crash with Arthrs' Ships

World Wonders
Fixed - Cross-Mod Crash with Arthrs' Ships

3.3.d
General
Fixed - Lunasettings now properly work (some settings will STILL ONLY APPLY WITH A NEW GAME, like disabling pets.)

Weapons & Ships
Added - Graphicslib effects for everything courtesy of Himemi/Cieve (Thank you so much!)

Items
Adjusted - Special item drops now about 60% less

Research Projects
Adjusted - Progress displays now use decimal formatting instead of rounding the number
Fixed - Research dialogue not recognizing if you have fitting special items in inventory

Artillery