@@ -49,7 +49,7 @@ x•	increase military upkeep by x3
     public static final float MAX_DISRUPTION_DAYS = 62f;
     public static final float INCOME_PER_STAB = 20000f;
     public static final float MAX_STAB_BONUS = 10f;
-    public static final float BASE_INCOME_MULT = 1.2f;
+    public static final float BASE_INCOME_MULT = 1.3f;
     public static final float BASE_STAB = 0f;
 
     public static class CorpoPolityTooltipAdder extends BaseIndustryOptionProvider {
@@ -268,7 +268,6 @@ x•	increase military upkeep by x3
         SwitchablePopulation population = ((SwitchablePopulation) industry);
 
         market.getIncomeMult().modifyMultAlways(population.getModId(2), BASE_INCOME_MULT, "Base (Corporate Governance)");
-        market.getIncomeMult().modifyMultAlways(modId, getIncomeStabilityMult(market.getPrevStability()), "Stability");
         market.getUpkeepMult().modifyMultAlways(modId, getUpkeepHazardMult(market.getHazardValue()), "Hazard rating");
 
         float income = market.getNetIncome();
